# kb-rag-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  architecture.drawio  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
app/: config.py  db.py  main.py  models.py  schemas.py
app/generation/: answer.py
app/ingest/: chunker.py  loader.py  pipeline.py
app/retrieval/: embed.py  search.py
app/routers/: documents.py  query.py
docker/: Dockerfile
evals/: README.md  dataset.jsonl  run_evals.py
sample_corpus/: 01-rag-overview.md  02-chunking-strategies.md  03-vector-search.md  04-evaluation.md  05-citations.md
tests/: test_api.py  test_chunker.py  test_search.py
